temporal-verifier/tests/examples/snapshots/fail/basic.fly.cvc4.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/basic.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
verification errors:
error: init does not imply invariant
   ┌─ tests/examples/fail/basic.fly:12:1
   │
12 │ assert always p(t0)
   │ ^^^^^^^^^^^^^^^^^^^
   │
   = counter example:
     p(@thread_0) = false
     q = false
     t0 = @thread_0


